--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --moderate_blue: #5457b6;
+  --soft_red: #ed6468;
+  --light_grayish_blue: #c3c4ef;
+  --pale_red: #ffb8bb;
+  --dark_blue: #324152;
+  --grayish_blue: #67727e;
+  --light_gray: #eaecf1;
+  --very_light_gray: #f5f6fa;
 }
 
 @media (prefers-color-scheme: dark) {
